feat(conversation): 优化 AI 自动回复建议接口性能