@@ -13,6 +13,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import jakarta.annotation.PreDestroy;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
@@ -24,6 +25,7 @@ import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -33,18 +35,21 @@ import java.util.stream.Collectors;
  * <p>并行调用知识库向量检索（KB 来源）与 LLM 上下文推理（CONTEXT 来源），
  * 合并去重后返回建议列表，KB 结果优先置前。
  *
- * <p>Redis 2 秒幂等缓存：同一 sessionId 在 2 秒内的重复请求直接返回缓存，
- * 防止前端防抖失效时重复触发 LLM 调用。
+ * <p>Redis 缓存：同一 sessionId + 消息内容在 30 秒内重复请求直接返回缓存，
+ * 新消息到来时自动命中不同 key，无需手动失效。
  *
- * <p>Redis key 格式：{@code reply_suggestions:{sessionId}}，TTL 2 秒。
+ * <p>Redis key 格式：{@code reply_suggestions:{sessionId}:{msgHash}}，TTL 30 秒。
  */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ReplySuggestionService {
 
-    private static final String KEY_PREFIX = ConversationCacheKeys.REPLY_SUGGESTIONS_PREFIX;
-    private static final long   CACHE_TTL_SECONDS   = 2L;
+    private static final String KEY_PREFIX          = ConversationCacheKeys.REPLY_SUGGESTIONS_PREFIX;
+    /** 同一消息的建议缓存 30 秒 */
+    private static final long   CACHE_TTL_SECONDS   = 30L;
+    /** 单路任务最长等待时间（KB 检索 + LLM 推理各自独立计时） */
+    private static final long   TASK_TIMEOUT_SECONDS = 15L;
     /** 用于上下文推理的最近消息轮数上限 */
     private static final int    MAX_HISTORY_TURNS   = 5;
     /** 上下文推理的固定置信度 */
@@ -62,27 +67,29 @@ public class ReplySuggestionService {
             3. 仅输出建议列表，不要输出其他说明文字
             """;
 
-    /** 用于并行执行 KB 检索 + LLM 推理的专线程池（2 线程，命名可观测） */
+    /**
+     * I/O 密集型任务（KB HTTP + LLM 网络请求）使用 CachedThreadPool：
+     * 线程按需创建，空闲 60s 后回收，并发请求不会因线程数上限而排队等待。
+     */
     private static final AtomicInteger WORKER_COUNTER = new AtomicInteger(0);
-    private final ExecutorService suggestionExecutor = Executors.newFixedThreadPool(
-            2,
+    private final ExecutorService suggestionExecutor = Executors.newCachedThreadPool(
             r -> {
                 Thread t = new Thread(r, "reply-suggestion-worker-" + WORKER_COUNTER.incrementAndGet());
                 t.setDaemon(true);
                 return t;
             });
 
-    private final StringRedisTemplate           redisTemplate;
-    private final ConversationHistoryRepository historyRepository;
-    private final KnowledgeServiceClient knowledgeServiceClient;
-    private final DynamicModelFactory           modelFactory;
+    private final StringRedisTemplate            redisTemplate;
+    private final ConversationHistoryRepository  historyRepository;
+    private final KnowledgeServiceClient         knowledgeServiceClient;
+    private final DynamicModelFactory            modelFactory;
 
     @PreDestroy
     public void shutdownExecutor() {
         log.info("[Suggestion] 关闭建议生成线程池");
         suggestionExecutor.shutdown();
         try {
-            if (!suggestionExecutor.awaitTermination(5, java.util.concurrent.TimeUnit.SECONDS)) {
+            if (!suggestionExecutor.awaitTermination(5, TimeUnit.SECONDS)) {
                 log.warn("[Suggestion] 线程池未在 5s 内终止，强制关闭");
                 suggestionExecutor.shutdownNow();
             }
@@ -95,80 +102,74 @@ public class ReplySuggestionService {
     /**
      * 获取回复建议列表。
      *
-     * <p>先查 Redis 缓存（2 秒内幂等），未命中则并行执行 KB 检索 + LLM 推理，
-     * 合并去重后写入缓存再返回。两路并行任务各自独立降级，互不影响。
+     * <p>流程：
+     * <ol>
+     *   <li>一次性加载会话历史，供后续步骤复用，避免重复 Redis 读取</li>
+     *   <li>查 Redis 缓存（key 含消息 hash，30 秒内相同消息命中缓存）</li>
+     *   <li>未命中则并行执行 KB 检索 + LLM 推理，各自带 {@value TASK_TIMEOUT_SECONDS}s 超时独立降级</li>
+     *   <li>合并去重后写入缓存再返回</li>
+     * </ol>
      *
      * @param sessionId   会话唯一标识
-     * @param lastMessage 访客最新消息文本（用于 KB 检索 query）
+     * @param lastMessage 访客最新消息文本（null 时从历史自动取最后一条）
      * @return 建议列表，KB 结果在前，CONTEXT 结果在后
      */
     public List<ReplySuggestionDTO> getSuggestions(String sessionId, String lastMessage) {
-        // lastMessage 未传时，从历史记录取最后一条访客消息
-        String resolvedMessage = (lastMessage == null || lastMessage.isBlank())
-                ? resolveLastUserMessage(sessionId)
+        // 一次性加载历史，resolveLastUserMessage 和 generateContextSuggestions 共用
+        List<ConversationMessage> history = historyRepository.findAll(sessionId);
+
+        String resolvedMessage = StringUtils.isBlank(lastMessage)
+                ? resolveLastUserMessage(history)
                 : lastMessage;
         if (resolvedMessage == null || resolvedMessage.isBlank()) {
             log.warn("[Suggestion] 会话 {} 无有效访客消息，返回空建议", sessionId);
             return List.of();
         }
-        String cacheKey = KEY_PREFIX + sessionId;
 
-        // 幂等缓存命中：2 秒内重复请求直接返回
-        String cached = redisTemplate.opsForValue().get(cacheKey);
+        // key 包含消息内容 hash：新消息自动绕过旧缓存，无需手动失效
+        String cacheKey = buildCacheKey(sessionId, resolvedMessage);
+
+        List<ReplySuggestionDTO> cached = readCache(cacheKey, sessionId);
         if (cached != null) {
-            try {
-                List<ReplySuggestionDTO> cachedList = JsonUtils.parseObject(
-                        cached, new TypeReference<List<ReplySuggestionDTO>>() {});
-                if (cachedList != null) {
-                    log.debug("[Suggestion] 命中缓存 sessionId={}", sessionId);
-                    return cachedList;
-                }
-            } catch (Exception e) {
-                log.warn("[Suggestion] 缓存反序列化失败，重新生成 sessionId={}", sessionId, e);
-            }
+            return cached;
         }
 
-        // 并行：KB 检索 + LLM 上下文推理，各自独立降级，互不影响
+        // 并行：KB 检索 + LLM 上下文推理，各自带超时 + 独立降级
         CompletableFuture<List<ReplySuggestionDTO>> kbFuture = CompletableFuture
                 .supplyAsync(() -> searchKb(resolvedMessage), suggestionExecutor)
+                .orTimeout(TASK_TIMEOUT_SECONDS, TimeUnit.SECONDS)
                 .exceptionally(e -> {
-                    log.warn("[Suggestion] KB 检索失败，降级为空列表 sessionId={}", sessionId, e);
+                    log.warn("[Suggestion] KB 检索失败/超时，降级为空列表 sessionId={}", sessionId, e);
                     return List.of();
                 });
+
         CompletableFuture<List<ReplySuggestionDTO>> contextFuture = CompletableFuture
-                .supplyAsync(() -> generateContextSuggestions(sessionId, resolvedMessage), suggestionExecutor)
+                .supplyAsync(() -> generateContextSuggestions(sessionId, resolvedMessage, history),
+                        suggestionExecutor)
+                .orTimeout(TASK_TIMEOUT_SECONDS, TimeUnit.SECONDS)
                 .exceptionally(e -> {
-                    log.warn("[Suggestion] LLM 推理失败，降级为空列表 sessionId={}", sessionId, e);
+                    log.warn("[Suggestion] LLM 推理失败/超时，降级为空列表 sessionId={}", sessionId, e);
                     return List.of();
                 });
 
-        List<ReplySuggestionDTO> kbResults      = kbFuture.join();
-        List<ReplySuggestionDTO> contextResults  = contextFuture.join();
+        List<ReplySuggestionDTO> merged = merge(kbFuture.join(), contextFuture.join());
 
-        // 合并：KB 优先，CONTEXT 追加；按内容去重
-        List<ReplySuggestionDTO> merged = merge(kbResults, contextResults);
-
-        // 写入 2 秒幂等缓存
-        try {
-            String json = JsonUtils.toJsonString(merged);
-            if (json != null) {
-                redisTemplate.opsForValue().set(cacheKey, json, Duration.ofSeconds(CACHE_TTL_SECONDS));
-            }
-        } catch (Exception e) {
-            log.warn("[Suggestion] 缓存写入失败 sessionId={}", sessionId, e);
-        }
-
+        writeCache(cacheKey, merged, sessionId);
         return merged;
     }
 
     // ---- 内部方法 ----
 
+    /** 构建缓存 key：前缀 + sessionId + 消息内容 hash（hex）。 */
+    private String buildCacheKey(String sessionId, String message) {
+        return KEY_PREFIX + sessionId + ":" + Integer.toHexString(message.hashCode());
+    }
+
     /**
      * 从对话历史取最后一条访客消息文本，供 lastMessage 未传时兜底使用。
-     * 若历史为空或无用户消息，返回 null。
+     * 接受已加载的历史列表，不再重复查 Redis。
      */
-    private String resolveLastUserMessage(String sessionId) {
-        List<ConversationMessage> history = historyRepository.findAll(sessionId);
+    private String resolveLastUserMessage(List<ConversationMessage> history) {
         for (int i = history.size() - 1; i >= 0; i--) {
             ConversationMessage msg = history.get(i);
             if ("user".equals(msg.role()) && msg.content() != null && !msg.content().isBlank()) {
@@ -196,11 +197,12 @@ public class ReplySuggestionService {
 
     /**
      * LLM 上下文推理：用最近 {@value #MAX_HISTORY_TURNS} 条消息 + 访客最新消息生成 2~3 条回复建议。
-     * 解析 LLM 输出中以"数字点空格"开头的行，confidence 固定 {@value #CONTEXT_CONFIDENCE}。
+     * 接受已加载的历史列表，不再重复查 Redis。
+     * 解析 LLM 输出中以"数字点/顿号 空格"开头的行，confidence 固定 {@value #CONTEXT_CONFIDENCE}。
      */
-    private List<ReplySuggestionDTO> generateContextSuggestions(String sessionId, String lastMessage) {
-        List<ConversationMessage> history = historyRepository.findAll(sessionId);
-        // 过滤 tool 中间态，只保留对话轮次，再取最近 N 条
+    private List<ReplySuggestionDTO> generateContextSuggestions(String sessionId,
+                                                                 String lastMessage,
+                                                                 List<ConversationMessage> history) {
         List<ConversationMessage> recentHistory = history.stream()
                 .filter(m -> m.role() != null
                         && List.of("user", "assistant", "agent").contains(m.role()))
@@ -224,9 +226,8 @@ public class ReplySuggestionService {
                 contextBlock.isBlank() ? "（无历史记录）" : contextBlock,
                 lastMessage);
 
-        String response = modelFactory.chat(List.of(ChatMessage.user(userPrompt)),
-                SUGGESTION_SYSTEM_PROMPT);
-
+        String response = modelFactory.chat(
+                List.of(ChatMessage.user(userPrompt)), SUGGESTION_SYSTEM_PROMPT);
         return parseSuggestions(response);
     }
 
@@ -262,7 +263,6 @@ public class ReplySuggestionService {
                                            List<ReplySuggestionDTO> context) {
         LinkedHashSet<String> seen = new LinkedHashSet<>();
         List<ReplySuggestionDTO> result = new ArrayList<>(kb.size() + context.size());
-
         for (ReplySuggestionDTO dto : kb) {
             if (seen.add(dto.content().toLowerCase())) {
                 result.add(dto);
@@ -274,5 +274,36 @@ public class ReplySuggestionService {
             }
         }
         return result;
+    }
+
+    /** 读取缓存，反序列化失败时静默降级。 */
+    private List<ReplySuggestionDTO> readCache(String cacheKey, String sessionId) {
+        String cached = redisTemplate.opsForValue().get(cacheKey);
+        if (cached == null) {
+            return null;
+        }
+        try {
+            List<ReplySuggestionDTO> result = JsonUtils.parseObject(
+                    cached, new TypeReference<List<ReplySuggestionDTO>>() {});
+            if (result != null) {
+                log.debug("[Suggestion] 命中缓存 sessionId={}", sessionId);
+                return result;
+            }
+        } catch (Exception e) {
+            log.warn("[Suggestion] 缓存反序列化失败，重新生成 sessionId={}", sessionId, e);
+        }
+        return null;
+    }
+
+    /** 写入缓存，失败时静默降级不影响主流程。 */
+    private void writeCache(String cacheKey, List<ReplySuggestionDTO> data, String sessionId) {
+        try {
+            String json = JsonUtils.toJsonString(data);
+            if (json != null) {
+                redisTemplate.opsForValue().set(cacheKey, json, Duration.ofSeconds(CACHE_TTL_SECONDS));
+            }
+        } catch (Exception e) {
+            log.warn("[Suggestion] 缓存写入失败 sessionId={}", sessionId, e);
+        }
     }
 }
